k8s-config/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payment-service
spec:
  host: payment-service
  subsets:
    - name: pod1
      labels:
        version: pod1
    - name: pod2
      labels:
        version: pod2
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN  # Default, evenly distributes traffic
