k8s-config/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: order-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-service
spec:
  hosts:
    - "*"
  gateways:
    - order-gateway
  http:
    - match:
        - uri:
            prefix: "/orders"
      route:
        - destination:
            host: order-service
            port:
              number: 80
    - match:
        - uri:
            prefix: "/payments"
      route:
        - destination:
            host: payment-service
            port:
              number: 80
